--- a/.github/workflows/admin_setup.yml
+++ b/.github/workflows/admin_setup.yml
@@ -1,12 +1,10 @@
-name: Daily Ingestion
+name: Admin Setup
 
 on:
-  schedule:
-    - cron: '0 0 * * *' # Runs daily at midnight
-  workflow_dispatch: # Allows manual trigger
+  workflow_dispatch:
 
 jobs:
-  ingest:
+  admin-setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -20,10 +18,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests beautifulsoup4 python-dateutil thefuzz supabase==2.3.1
+          pip install supabase==2.3.1
 
-      - name: Run Ingestion
+      - name: Run Admin Setup
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-        run: python scripts/ingest.py
+          ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
+        run: python scripts/setup_admin.py
