Align Supabase secret naming with UI (SUPABASE_SECRET_KEY)

--- a/.github/workflows/admin_setup.yml
+++ b/.github/workflows/admin_setup.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Run Admin Setup
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          SUPABASE_SECRET_KEY: ${{ secrets.SUPABASE_SECRET_KEY }}
           ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
         run: python scripts/setup_admin.py
