--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Run Ingestion
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          SUPABASE_SECRET_KEY: ${{ secrets.SUPABASE_SECRET_KEY }}
         run: python scripts/ingest.py
