--- a/.github/workflows/admin_setup.yml
+++ b/.github/workflows/admin_setup.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install supabase==2.3.1
+          pip install supabase
 
       - name: Run Admin Setup
         env:
