--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests beautifulsoup4 python-dateutil thefuzz supabase==2.3.1
+          pip install feedparser requests beautifulsoup4 python-dateutil thefuzz supabase
 
       - name: Run Ingestion
         env:
