--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -20,10 +20,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests beautifulsoup4 python-dateutil thefuzz supabase
+          pip install feedparser requests beautifulsoup4 python-dateutil thefuzz supabase google-generativeai
 
       - name: Run Ingestion
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SECRET_KEY: ${{ secrets.SUPABASE_SECRET_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python scripts/ingest.py
