--- a/.github/workflows/ingest.yml
+++ b/.github/workflows/ingest.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests beautifulsoup4 python-dateutil thefuzz supabase google-generativeai
+          pip install feedparser requests beautifulsoup4 python-dateutil thefuzz supabase google-genai
 
       - name: Run Ingestion
         env:
